--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "acp-admin",
+  "name": "acp-admin-standalone-web",
   "version": "1.0.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zhangbin1010/acp-admin"
+    "url": "https://github.com/zhangbinhub/acp-admin-standalone-web"
   },
   "scripts": {
     "start": "vue-cli-service serve",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "axios": "^0.24.0",
-    "core-js": "^3.19.3",
+    "core-js": "^3.20.0",
     "cropperjs": "^1.5.12",
     "echarts": "^5.2.2",
     "element-plus": "^1.2.0-beta.6",
