--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@element-plus/icons": "0.0.11",
+    "@element-plus/icons": "^0.0.11",
     "axios": "^0.24.0",
     "core-js": "^3.20.1",
     "cropperjs": "^1.5.12",
     "echarts": "^5.2.2",
-    "element-plus": "^1.2.0-beta.6",
+    "element-plus": "^1.3.0-beta.1",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
     "js-sha256": "^0.9.0",
@@ -26,18 +26,17 @@
     "qs": "^6.10.2",
     "vue": "^3.2.6",
     "vue-axios": "^3.4.0",
-    "vue-i18n": "^9.2.0-beta.3",
+    "vue-i18n": "^9.2.0-beta.26",
     "vue-json-editor": "^1.4.3",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.0-beta.3",
-    "@vue/cli-plugin-router": "^5.0.0-beta.3",
-    "@vue/cli-plugin-vuex": "^5.0.0-beta.3",
-    "@vue/cli-service": "^5.0.0-beta.3",
+    "@vue/cli-plugin-babel": "^5.0.0-rc.1",
+    "@vue/cli-plugin-router": "^5.0.0-rc.1",
+    "@vue/cli-plugin-vuex": "^5.0.0-rc.1",
+    "@vue/cli-service": "^5.0.0-rc.1",
     "@vue/compiler-sfc": "^3.2.26",
-    "css-loader": "^6.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.14",
