--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.6",
     "axios": "^0.25.0",
     "core-js": "^3.20.3",
     "cropperjs": "^1.5.12",
-    "echarts": "^5.2.2",
+    "echarts": "^5.3.0",
     "element-plus": "^1.3.0-beta.9",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
@@ -44,7 +43,11 @@
   },
   "browserslist": [
     "> 1%",
+    "Chrome > 60",
     "last 2 versions",
+    "not ie 8-11",
+    "not ie_mob 8-11",
+    "not op_mini all",
     "not dead"
   ]
 }
