--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^0.2.6",
     "axios": "^0.25.0",
     "core-js": "^3.20.3",
     "cropperjs": "^1.5.12",
