--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.6",
+    "@element-plus/icons-vue": "^0.2.7",
     "axios": "^0.25.0",
     "core-js": "^3.21.0",
     "cropperjs": "^1.5.12",
     "echarts": "^5.3.0",
-    "element-plus": "^1.3.0-beta.10",
+    "element-plus": "^2.0.1",
     "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
     "js-sha256": "^0.9.0",
@@ -24,8 +24,8 @@
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qs": "^6.10.3",
-    "vue": "^3.2.26",
-    "vue-axios": "^3.4.0",
+    "vue": "^3.2.30",
+    "vue-axios": "^3.4.1",
     "vue-i18n": "^9.2.0-beta.26",
     "vue-json-editor": "^1.4.3",
     "vue-router": "^4.0.12",
@@ -36,7 +36,7 @@
     "@vue/cli-plugin-router": "^5.0.0-rc.2",
     "@vue/cli-plugin-vuex": "^5.0.0-rc.2",
     "@vue/cli-service": "^5.0.0-rc.2",
-    "@vue/compiler-sfc": "^3.2.29",
+    "@vue/compiler-sfc": "^3.2.30",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.14",
@@ -44,7 +44,11 @@
   },
   "browserslist": [
     "> 1%",
-    "Chrome > 70",
+    "Chrome >= 64",
+    "edge >= 79",
+    "firefox >= 78",
+    "safari >= 12",
+    "ios_saf >= 12",
     "last 2 versions",
     "not ie 8-11",
     "not ie_mob 8-11",
