--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.7",
     "axios": "^0.26.0",
-    "core-js": "^3.21.0",
+    "core-js": "^3.21.1",
     "cropperjs": "^1.5.12",
     "echarts": "^5.3.0",
     "element-plus": "^2.0.2",
@@ -26,7 +26,7 @@
     "qs": "^6.10.3",
     "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
-    "vue-i18n": "^9.2.0-beta.26",
+    "vue-i18n": "^9.1.9",
     "vue-json-editor": "^1.4.3",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
@@ -40,7 +40,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.68.0"
+    "webpack": "^5.69.0"
   },
   "browserslist": [
     "> 1%",
