--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.0-rc.2",
-    "@vue/cli-plugin-router": "^5.0.0-rc.2",
-    "@vue/cli-plugin-vuex": "^5.0.0-rc.2",
-    "@vue/cli-service": "^5.0.0-rc.2",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-router": "^5.0.1",
+    "@vue/cli-plugin-vuex": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
     "@vue/compiler-sfc": "^3.2.31",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.69.0"
+    "webpack": "^5.69.1"
   },
   "browserslist": [
     "> 1%",
